Restyled Expert-Reviewed portal details page to match the appearance of the All Data portal detials page, introduced new group structure for expert-reviewed fields. Touched up header appearance on extra-small viewports; header text no longer wraps.

--- a/website/js/css/custom.css
+++ b/website/js/css/custom.css
@@ -503,6 +503,7 @@ th[role='columnheader'] .help, .help-target .help {
 
 .Variant-detail-title {
     margin: 20px;
+    white-space: nowrap;
 }
 
 .glyphicon.help {
